themes/openstack/scss/home-page.scss
/* ... */
a.promo-btn:hover, a.promo-btn:focus  {
  text-decoration: none;
  /*background: rgba(255, 255, 255, 0.2);*/
  background: #A51B1B;
}

.promo-btn-wrapper {
  margin-top: 28px;
  margin-bottom: 28px;
}
a.promo-btn i.fa-chevron-right {
  background: transparent;
  border-radius: 50%;
  padding: 0;
  font-size: 13px;
  margin-left: 20px;
  line-height: 1em;
}

p.promo-dates {
  /*display: inline-block;
  margin-top: 10px;
  font-weight: 400; */
  display: inline-block;
  margin-top: 10px;
  font-weight: 400;
  margin-bottom: 30px;
  letter-spacing: -.4px;
}

@media (max-width: 900px) {

  .intro-header.featured {
    [class*="col-"] {
      padding-left: 15px !important;
      padding-right: 15px !important;
    }

    a.anniversary-btn {
      margin-left:-30px;
    }

    .diagram-section img {
      width: 100%;
      padding-bottom: 30px;
    }
  }

  .intro-header.featured img {
    margin: 0 auto;
    width: 80%;
    display: block;
  }

  a.promo-btn {
    padding: 7px 10px;
  }
  .promo-btn-wrapper{
    text-align: center;
  }
}

/*End Hero*/



/*News Anniversary*/
.news-anniversary {
  width: 90%;
  background-color: #00497B;
  border-radius: 10px;
  min-height: 200px;
  display: flex;
  display: -ms-flexbox;
  display: -webkit-flex;
  align-items: center;
  justify-content: space-evenly;
  border-left: 50px solid #ffd602;
  margin: auto; }

.news-anniversary h3 {
  font-size: 1.2em;
  color: #00497B;
  text-transform: uppercase;
  letter-spacing: 3px;
  position: absolute;
  left: 50px;
  transform: rotate(270deg); }

.news-anniversary img {
  margin-bottom: 30px;
  width: 600px; }

.anniversary-robot {
  width: 30%;
  padding: 19px 0; }

.anniversary-text {
  width: 100%;
  padding: 50px;
  color: #FFFFFF;
  padding-left: 80px;
  padding-right: 90px;
  text-align: left; }

.anniversary-text p {
  font-size: 16px;
  color: #fff; }

a.anniversary-btn {
  white-space: nowrap;
  color: white;
  font-size: 16px;
  font-weight: 400;
  background: transparent;
  border: 2px solid #fff;
  padding: 7px 30px;
  margin: 0 auto;
  text-align: center;
  text-transform: uppercase;
  min-width: 190px;
  display: inline-block;
  line-height: 22px; }

a.anniversary-btn:hover, a.anniversary-btn:focus {
  text-decoration: none;
  background: #fff;
  color: #00497B; }

.anniversary-btn-wrapper {
  width: 50%;
  text-align: center; }

.anniversary-btn-wrapper p {
  font-size: 18px;
  color: #fff;
  text-align: center; }

@media (max-width: 1200px) {
  .anniversary-text {
    padding-right: 20px; }
  .anniversary-btn-wrapper {
    width: 50%; } 
.news-anniversary h3 {
  position:absolute;
  left:40px;
}
}


@media (max-width: 1100px) {
  .news-anniversary {
    flex-direction: column; }
  .anniversary-text {
    padding-bottom: 20px;
    text-align: center;
    padding-left: 20px; }
  .anniversary-btn-wrapper {
    padding-bottom: 40px; } 
  .news-anniversary h3 {
    left:35px;
  }
}
@media (max-width: 1000px) {
  .news-anniversary h3 {
    left:30px;
  }
}

@media (max-width: 900px) {
  .news-anniversary h3 {
    left:25 px;
  }
}

@media (max-width: 767px) {
  .news-anniversary {
    flex-direction: column;
    text-align: center; }
  .news-anniversary .anniversary-robot {
    width: 100%;
    padding: 19px 0 0; }
  .news-anniversary .anniversary-text {
    width: 100%;
    padding: 20px;
    text-align: center;
    padding: 0 10px; }
  .anniversary-text p {
    font-size: 16px;
    line-height: 2.2em;
    padding: 0 20px; }
  .news-anniversary .anniversary-btn-wrapper {
    width: 100%;
    text-align: center;
    margin: 19px 0 29px;
    padding-bottom: 10px; }
  .news-anniversary img {
    margin-bottom: 10px;
    width: 400px;
    padding-top: 40px; } 
  .news-anniversary h3 {
    left:15px;
  }}

@media (max-width: 550px) {
  .news-anniversary {
    border-top: 40px solid #ffd602;
    border-left: none;
    magin: auto !important;
    width: 90%; }
  .news-anniversary h3 {
    font-size: 1.1em;
    width: 100%;
    transform: none;
    text-align: center; 
    margin-top:-380px;
}
  .news-anniversary img {
    width: 320px;
    padding-bottom: 15px; }
  .anniversary-text p {
    font-size: 14px;
    line-height: 2.2em;
    padding: 0 20px; } }

/*End News Anniversary*/


/*Diagram Section*/
.diagram-section {
  margin-top: 65px; }
  .diagram-section h2 {
    font-size: 28px;
    color: #00497B;
    padding-top: 30px; }
  .diagram-section p {
    font-size: 16px;
    line-height: 22px;
    color: #888; }
  .diagram-section a.diagram-btn {
    white-space: nowrap;
    color: white;
    font-size: 16px;
    font-weight: 400;
    background: #ed1944;
    padding: 7px 30px;
    margin: 0 auto;
    text-align: center;
    text-transform: uppercase;
    min-width: 250px;
    display: inline-block;
    line-height: 2; }
  .diagram-section a.diagram-btn:hover, .diagram-section a.diagram-btn:focus {
    text-decoration: none;
    /*background: rgba(255, 255, 255, 0.2);*/
    background: #A51B1B; }
  .diagram-section .diagram-btn-wrapper {
    margin-top: 40px; }
  .diagram-section .diagram-icons {
    width: 100%;
    margin: auto;
    margin-top: 30px; }
    .diagram-section .diagram-icons img {
      margin-bottom: -80px;
      width: 60%;
      margin-left: 20%; }
    .diagram-section .diagram-icons p, .diagram-section .diagram-icons h2 {
      text-align: center; }

@media (max-width: 767px) {
  .diagram-section .diagram-btn-wrapper {
    margin-top: 40px;
    text-align: center; }
  .diagram-section .diagram-icons img {
    width: 50%;
    margin: 0 auto;
    display: block;
    margin-bottom: -40px; }
  .diagram-section .diagram-icons h2 {
    margin-bottom: 0px;
    padding-top: 20px; } }

@media (max-width: 1000px) {
  .diagram-section .diagram-icons img {
    margin-bottom: -50px; }
  .diagram-section .diagram-icons h2 {
    padding-top: 20px; } }
/* ... */

